--- a/Dockerfile-7.1.4
+++ b/Dockerfile-7.1.4
@@ -1,7 +1,9 @@
 FROM ivantichy/jira:7.1.4
 
-RUN apt-get -y update && \
-    apt-get -y remove postgresql && \
+RUN apt-get -y remove postgresql && \
+    wget -q https://www.postgresql.org/media/keys/ACCC4CF8.asc -O - | sudo apt-key add - && \
+    echo "deb http://apt.postgresql.org/pub/repos/apt/ jessie-pgdg main" >> /etc/apt/sources.list.d/pgdg.list && \
+    apt-get -y update && \
     apt-get -y install postgresql-9.5 && \
     rm -rf /var/lib/apt/lists/* && \
     cp -r /var/lib/postgresql/9.5/main/* /home/dbbackup/ && \
