--- a/Dockerfile-7.1.4
+++ b/Dockerfile-7.1.4
@@ -1,7 +1,7 @@
 FROM ivantichy/jira:7.1.4
 
 RUN apt-get -y remove postgresql && \
-    wget -q https://www.postgresql.org/media/keys/ACCC4CF8.asc -O - | sudo apt-key add - && \
+    wget -q https://www.postgresql.org/media/keys/ACCC4CF8.asc -O - | apt-key add - && \
     echo "deb http://apt.postgresql.org/pub/repos/apt/ jessie-pgdg main" >> /etc/apt/sources.list.d/pgdg.list && \
     apt-get -y update && \
     apt-get -y install postgresql-9.5 && \
