--- a/Dockerfile-7.1.4
+++ b/Dockerfile-7.1.4
@@ -1,12 +1,12 @@
 FROM ivantichy/jira:7.1.4
 
-RUN apt-get -y remove postgresql && \
-    wget -q https://www.postgresql.org/media/keys/ACCC4CF8.asc -O - | apt-key add - && \
-    echo "deb http://apt.postgresql.org/pub/repos/apt/ jessie-pgdg main" >> /etc/apt/sources.list.d/pgdg.list && \
-    apt-get -y update && \
-    apt-get -y install postgresql-9.5 && \
-    rm -rf /var/lib/apt/lists/* && \
-    cp -r /var/lib/postgresql/9.5/main/* /home/dbbackup/ && \
-    ln -s /var/lib/postgresql/9.5 /var/lib/postgresql/9.4
+#RUN apt-get -y remove postgresql && \
+#    wget -q https://www.postgresql.org/media/keys/ACCC4CF8.asc -O - | apt-key add - && \
+#    echo "deb http://apt.postgresql.org/pub/repos/apt/ jessie-pgdg main" >> /etc/apt/sources.list.d/pgdg.list && \
+#    apt-get -y update && \
+#    apt-get -y install postgresql-9.5 && \
+#    rm -rf /var/lib/apt/lists/* && \
+#    cp -r /var/lib/postgresql/9.5/main/* /home/dbbackup/ && \
+#    ln -s /var/lib/postgresql/9.5 /var/lib/postgresql/9.4
 
-VOLUME /var/lib/postgresql/9.5/main /var/atlassian/jira-app /var/atlassian/jira-home
+#VOLUME /var/lib/postgresql/9.5/main /var/atlassian/jira-app /var/atlassian/jira-home
